Bug 166216 - notifications do not work at all
Summary: notifications do not work at all
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-10 12:04 UTC by Maciej Pilichowski
Modified: 2009-04-10 23:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2008-07-10 12:04:46 UTC
Version:            (using Devel)
Installed from:    Compiled sources

notifications do not work at all

Well, set new feed or articles --> popup window, indication for taskbar entry. Add new feed, or get new articles. Nothing will happen (I mean there will be no notification).
Comment 1 uprooter 2008-11-23 22:06:04 UTC
Same bug here  with akregator on kde 4.1.3 (gentoo) .
Waiting for this to be fixed. or at least some workaround.
Comment 2 Daniel Dumitrache 2009-01-30 11:07:50 UTC
with kde 4.2.0 notifications work if akregator is started as stand alone, but if started from kontact they don't
Comment 3 uprooter 2009-03-20 10:13:41 UTC
Same on 4.2.1 :(
Comment 4 Frank Osterfeld 2009-04-10 23:21:20 UTC
SVN commit 952086 by osterfeld:

re-enable notifications
The standard popup is too small for notifying many items though
BUG:166216
BUG:170314

 M  +4 -4      akregator.notifyrc  
 M  +3 -8      akregator_part.cpp  
 M  +5 -1      feed.cpp  
 M  +0 -26     mainwidget.cpp  
 M  +0 -3      mainwidget.h  
 M  +9 -11     notificationmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952086