backport

r952086 | osterfeld | 2009-04-10 23:21:18 +0200 (Fri, 10 Apr 2009) | 4 lines

re-enable notifications
The standard popup is too small for notifying many items though
BUG:166216
BUG:170314


svn path=/branches/KDE/4.2/kdepim/; revision=955446